--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,11 @@ inputs:
   due-date:
     description: Provide due date for milestone
     required: false
+    default: ''
+  due-day-increment:
+    description: Provide number of days to add in current day for due date
+    required: false
+    default: ''
   description:
     description: Provide description for milestone
     default: ''
@@ -46,13 +51,24 @@ runs:
       run: ${{ github.action_path }}/version_script.sh ${{ inputs.increment-type }} ${{ inputs.increment }} ${{ inputs.prefix }}
       shell: bash
 
+    - name: Milestone due date
+      id: date
+      run: |
+        INC=${{ inputs.due-day-increment }}
+        DUE_ON=${{ inputs.due-date }}
+        if [[ $INC != '' ]]; then
+          DUE_ON=$(date --iso-8601=seconds -d '+$INC days')
+        fi
+        echo milestone_due="$DUE_ON" >> "$GITHUB_OUTPUT"
+      shell: bash
+
     - name: Create Milestone
       id: milestone
       uses: oinume/create-scheduled-milestone-action@v1.0.2
       with:
         title: ${{ steps.title.outputs.milestone_title }}
         state: "open"
-        due_on: ${{ inputs.due-date }}
+        due_on: ${{ steps.date.outputs.milestone_due }}
         description: ${{ inputs.description }}
       env:
         GITHUB_TOKEN: ${{ env.GITHUB_TOKEN  }}
