--- a/action.yml
+++ b/action.yml
@@ -64,11 +64,10 @@ runs:
 
     - name: Create Milestone
       id: milestone
-      uses: oinume/create-scheduled-milestone-action@v1.0.2
+      uses: sv-tools/create-milestone-action@v1.5.0
       with:
+        token: ${{ env.GITHUB_TOKEN }}
         title: ${{ steps.title.outputs.milestone_title }}
         state: "open"
         due_on: ${{ steps.date.outputs.milestone_due }}
         description: ${{ inputs.description }}
-      env:
-        GITHUB_TOKEN: ${{ env.GITHUB_TOKEN  }}
